syntax = "proto3";

option csharp_namespace = "Chat";

// send
message SPingPacket {

}

// receive
message CPongPacket {

}